--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
     background-color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .botoes {
@@ -26,8 +26,54 @@ body {
     padding-top: 20px;
 }
 
-.footer {
+/* Footer */
+
+footer {
     background-color: #f2f2f2;
     border-top: 1px solid #e4e4e4;
     padding: 10px;
+    width: 100%;
+}
+
+.footer-country {
+    border-top: 1px solid #e4e4e4;
+    height: 40px;
+    position: relative;
+}
+
+.footer-country a {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.footer-adicional {
+    border-top: 1px solid #e4e4e4;
+    position: relative;
+    height: 40px;
+}
+
+.footer-adicional-esquerda {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.footer-adicional-direita {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.footer-adicional-direita-config {
+    padding: 0 27px 0 27px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #0000008a;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0 0 0 27px;
+    font-size: 14px;
 }
