--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,64 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Header */
+
+header {
+    width: 100%;
+    height: 60px;
+    position: relative;
+}
+
+.menu {
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.menu-superior {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    padding: 0 30px;
+    width: 248.83px;
+    height: 30px;
+    transform: translateY(50%);
+    font-size: 13px;
+}
+
+.menu-superior p,img {
+    display: inline;
+}
+
+.user-img-box {
+    padding: 0 0 0 15px;
+    display: inline;
+}
+
+.user-img {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+}
+
+.gmail {
+    padding: 0 15px 0 0;
+    color: #000000de;
+
+}
+
+.imagens {
+    padding: 0 15px 0 0;
+    color: #000000de;
+
+}
+
+.menu-icone {
+    width: 30px;
+    height: 30px;
+}
+
+/* Main */
+
 .botoes {
     width: 940px;
 }
