--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,10 @@ header {
 
 /* Main */
 
+main {
+
+}
+
 .botoes {
     width: 940px;
 }
@@ -97,6 +101,8 @@ footer {
     border-top: 1px solid #e4e4e4;
     padding: 10px;
     width: 100%;
+    position: absolute;
+    bottom: 0;
 }
 
 .footer-country {
