--- a/css/index.css
+++ b/css/index.css
@@ -80,18 +80,27 @@ main {
     width: 272;
 }
 
-.botao-m {
+button {
     background-color: #f2f2f2;
-    width: 140px;
+    color: #5F6368;
     height: 36px;
-    border-radius: 5%;
+    border-radius: 4px;
+    padding: 0 16px;
+    font-size: 14px;
+    margin: 11px 4px;
+    border: none;
+    font-family: arial, sans-serif;
+    text-decoration: none;
+    cursor: pointer;
+    color: #5F6368;
+    min-width: 54px;    
 }
 
-.botao-m a{
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    padding-top: 20px;
+button:hover {
+    color: #222222;
+    border-radius: 4px;
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px #0000001a;
 }
 
 /* Footer */
