--- a/css/index.css
+++ b/css/index.css
@@ -67,10 +67,6 @@ header {
 
 /* Main */
 
-main {
-
-}
-
 .botoes {
     width: 940px;
 }
@@ -78,6 +74,40 @@ main {
 .logo {
     height: 92;
     width: 272;
+}
+
+.search-box {
+    width: 582px;
+    background: #fff;
+    border: 1px solid #dfe1e5;
+    box-shadow: none;
+    border-radius: 24px;
+    height: 44px;
+    margin: 11px auto;
+}
+
+.search-box:hover {
+    box-shadow: 0 1px 6px 0 #20212447;
+    border-color: #dfe1e500;
+}
+
+input {
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    color: #000000de;
+    height: 34px;
+    font-size: 16px;
+    width: 447px;
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+    
+}
+
+.botoes {
+    margin: 0 auto;
 }
 
 button {
@@ -94,6 +124,7 @@ button {
     cursor: pointer;
     color: #5F6368;
     min-width: 54px;    
+    margin: 0 auto;
 }
 
 button:hover {
@@ -101,6 +132,22 @@ button:hover {
     border-radius: 4px;
     border: 1px solid #c6c6c6;
     box-shadow: 0 1px 1px #0000001a;
+}
+
+.botoes {
+    padding: 18px 0 0 0;
+}
+
+.botao-m-p {
+    position: absolute;
+    right: 50%;
+    margin: 11px 6px;
+}
+
+.botao-m-es {
+    position: absolute;
+    left: 50%;
+    margin: 11px 6px;
 }
 
 /* Footer */
