--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 /* Header */
@@ -13,7 +13,7 @@ header {
 
 .menu {
     position: relative;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .menu-superior {
@@ -167,7 +167,7 @@ footer {
     position: relative;
 }
 
-.footer-country a {
+.footer-country .footer-text {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -189,17 +189,29 @@ footer {
     position: absolute;
     right: 0;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-50%);    
 }
 
 .footer-adicional-direita-config {
     padding: 0 27px 0 27px;
-}
-
-footer a {
     text-decoration: none;
     color: #0000008a;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+}
+
+.footer-text {
+    text-decoration: none;
+    color: #0000008a;
+    font-family: Arial, sans-serif;
     padding: 0 0 0 27px;
     font-size: 14px;
+}
+
+.country {
+    font-size: 15px;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
