--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,14 @@ header {
     width: 940px;
 }
 
+.google-logo {
+    padding-top: 109px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 .logo {
     height: 92;
     width: 272;
@@ -84,6 +92,8 @@ header {
     border-radius: 24px;
     height: 44px;
     margin: 11px auto;
+    padding: 5px 8px 0 16px;
+    padding-left: 14px;
 }
 
 .search-box:hover {
@@ -91,11 +101,16 @@ header {
     border-color: #dfe1e500;
 }
 
+.search-box .container {
+    display: flex;
+    align-items: center;
+}
+
 input {
     background-color: transparent;
     border: none;
-    margin: 0;
-    padding: 0;
+    margin-top: -37px;
+    padding: 0px 20px;
     color: #000000de;
     height: 34px;
     font-size: 16px;
@@ -103,7 +118,7 @@ input {
     box-shadow: 0 0 0 0;
     border: 0 none;
     outline: 0;
-    
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .botoes {
