--- a/css/index.css
+++ b/css/index.css
@@ -67,32 +67,43 @@ header {
 
 /* Main */
 
+main .container {
+    width: 100%;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
 .botoes {
-    width: 940px;
+    /* width: 940px; */
+}
+
+.container-logo {
+    height: 233px;
 }
 
 .google-logo {
     padding-top: 109px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
 }
 
 .logo {
-    height: 92;
-    width: 272;
+    height: 92px;
+    width: 272px;
 }
 
 .search-box {
-    width: 582px;
+    display: flex;
+    align-items: center;
+    width: 560px;
     background: #fff;
     border: 1px solid #dfe1e5;
     box-shadow: none;
     border-radius: 24px;
     height: 44px;
-    margin: 11px auto;
-    padding: 5px 8px 0 16px;
+    padding: 0px 8px 0 14px;
     padding-left: 14px;
 }
 
@@ -101,28 +112,30 @@ header {
     border-color: #dfe1e500;
 }
 
-.search-box .container {
+.searchIcon {
+    height: 44px;
+    width: 20px;
     display: flex;
     align-items: center;
+}
+
+.searchIcon img {
+    height: 20px;
+    width: 20px;
 }
 
 input {
     background-color: transparent;
     border: none;
-    margin-top: -37px;
-    padding: 0px 20px;
+    padding: 0 0 0 13px;
     color: #000000de;
-    height: 34px;
+    height: 44px;
     font-size: 16px;
     width: 447px;
     box-shadow: 0 0 0 0;
     border: 0 none;
     outline: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.botoes {
-    margin: 0 auto;
+    font-family: Arial, sans-serif;
 }
 
 button {
@@ -139,7 +152,7 @@ button {
     cursor: pointer;
     color: #5F6368;
     min-width: 54px;    
-    margin: 0 auto;
+    border: 1px solid #f2f2f2;
 }
 
 button:hover {
@@ -149,20 +162,37 @@ button:hover {
     box-shadow: 0 1px 1px #0000001a;
 }
 
+.container-botoes {
+    height: 70px;
+    padding-top: 18px;
+}
+
 .botoes {
-    padding: 18px 0 0 0;
+    height: 58px;
 }
 
 .botao-m-p {
-    position: absolute;
+    /* position: absolute;
     right: 50%;
-    margin: 11px 6px;
+    margin: 11px 6px; */
 }
 
 .botao-m-es {
-    position: absolute;
+    /* position: absolute;
     left: 50%;
-    margin: 11px 6px;
+    margin: 11px 6px; */
+}
+
+/* Text Google */
+
+.text-google {
+    font-size: small;
+    font-family: Arial, sans-serif;
+}
+
+.text-google a {
+    text-decoration: none;
+    color: #1a0dab;
 }
 
 /* Footer */
